--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
@@ -4,6 +4,7 @@
 <div class="ui form center aligned" id="int09-1" ngNativeValidate>
     <div class="ui attached  segment">
         <input type="hidden" id="searchFlag">
+        <input type="hidden" id="id">
         <input type="hidden" id="travelTo">
         <input type="hidden" id="travelToId">
         <div class="inline fields">
