--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-2/int09-1-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-2/int09-1-1-2.component.html
@@ -374,7 +374,7 @@
     <div class="ui center aligned grid">
       <div class="eight wide column">
         <button class="ui  grey button" type="button" (click)="clickBack()">กลับ</button>
-        <button class="ui  primary button" type="button" (click)="modalAddHead()">บันทึก</button>
+        <button class="ui  primary button" type="button" (click)="save()">บันทึก</button>
       </div>
     </div>
     <br>
