--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
@@ -1,15 +1,5 @@
 <div class="ui centered grid">
 
-    <!-- <div class="row" *ngIf="loading">
-        <div class="column">
-            <div class="ui segment loading">
-                <div class="ui active inverted dimmer">
-                    <div class="ui text loader">กำลังโหลด</div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
     <div class="centered row full-height" *ngIf="!loading">
         <div class="eight wide column nodata" *ngIf="questionnaire.length == 0">
             <h2 class="ui header">
@@ -23,65 +13,6 @@
                 </div>
             </h2>
         </div>
-        <!-- <form class="column ui form" *ngIf="questionnaire.length > 0" id="form" (submit)="save($event)" #f ngNativeValidate> -->
-        <!-- <div class="ui styled fluid accordion" id="acc">
-                <div *ngFor="let qtn of questionnaire; let i = index">
-                    <div class="active title" id="title{{i}}">
-                        <h4 class="text-center">{{ qtn.title }}</h4>
-                    </div>
-                    <div class="active content" id="content{{i}}">
-                        <table class="ui celled table" *ngIf="qtn.detail.length>0">
-                            <thead class="text-center">
-                                <tr>
-                                    <th rowspan="2" style="width: 5%">ที่</th>
-                                    <th rowspan="2">รายการ</th>
-                                    <th>มี / ใช่</th>
-                                    <th>ไม่มี / ไม่ใช่</th>
-                                </tr>
-                                <tr>
-                                    <th class="border">สมบูรณ์</th>
-                                    <th>ไม่สมบูรณ์</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let detail of qtn.detail; let j = index" class="{{ detail.headerId ? 'head' : '' }}">
-                                    <td *ngIf="detail.headerId" class="text-center">{{detail.order}}</td>
-                                    <td *ngIf="detail.headerId" colspan="3">{{detail.content}}</td>
-
-                                    <td *ngIf="detail.detailId" class="text-right">{{detail.order}}</td>
-                                    <td *ngIf="detail.detailId">{{detail.content}}</td>
-                                    <td *ngIf="detail.detailId" class="text-center">
-                                        <div class="field">
-                                            <div class="ui checkbox">
-                                                <input type="radio" name="point{{questionnaire[i].detail[j].detailId}}" value="true"
-                                                    id="point{{questionnaire[i].detail[j].detailId}}" required>
-                                                <label></label>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td *ngIf="detail.detailId" class="text-center">
-                                        <div class="field">
-                                            <div class="ui checkbox">
-                                                <input type="radio" name="point{{questionnaire[i].detail[j].detailId}}" value="false"
-                                                    id="point{{questionnaire[i].detail[j].detailId}}" required>
-                                                <label></label>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div class="ui form" *ngIf="qtn.conclusion && qtn.detail.length>0">
-                            <div class="field">
-                                <label class="text-left">สรุปผลการสอบทาน</label>
-                                <div class="ui input">
-                                    <textarea name="conclusion{{questionnaire[i].detail[0].headerId}}" id="conclusion{{questionnaire[i].headerId}}" rows="4" required></textarea>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
         <form class="column ui form" *ngIf="questionnaire.length > 0" id="form" (submit)="onSubmit($event)" #f
             ngNativeValidate>
             <div class="ui segments" *ngFor="let qtn of questionnaire; let i = index">
@@ -110,27 +41,25 @@
                         <tbody *ngIf="qtn.detail.length>0">
                             <tr *ngFor="let detail of qtn.detail; let j = index" class="{{ detail.headerId ? 'head' : '' }}">
 
-                                <td *ngIf="detail.headerId && qtn.detail.length > 1" class="text-center">{{detail.order}}</td>
-                                <td *ngIf="detail.headerId && qtn.detail.length > 1" colspan="3">{{detail.content}}</td>
+                                <td *ngIf="detail.headerId && detail.type !== 'header'" class="text-center">{{detail.order}}</td>
+                                <td *ngIf="detail.headerId && detail.type !== 'header'" colspan="3">{{detail.content}}</td>
 
-                                <td *ngIf="detail.headerId && qtn.detail.length == 1" class="text-center">{{detail.order}}</td>
-                                <td *ngIf="detail.headerId && qtn.detail.length == 1">{{detail.content}}</td>
-                                <td *ngIf="detail.headerId && qtn.detail.length == 1" class="text-center">
+                                <td *ngIf="detail.headerId && detail.type === 'header'" class="text-center">{{detail.order}}</td>
+                                <td *ngIf="detail.headerId && detail.type === 'header'">{{detail.content}}</td>
+                                <td *ngIf="detail.headerId && detail.type === 'header'" class="text-center">
                                     <div class="field">
                                         <div class="ui checkbox">
-                                            <input type="radio" name="point_{{questionnaire[i].detail[j].headerId}}"
-                                                value="Y" id="point_{{questionnaire[i].detail[j].headerId}}"
-                                                required>
+                                            <input type="radio" name="point_header_{{questionnaire[i].detail[j].headerId}}"
+                                                value="Y" [(ngModel)]="questionnaire[i].detail[j].point" id="point_header_{{questionnaire[i].detail[j].headerId}}">
                                             <label></label>
                                         </div>
                                     </div>
                                 </td>
-                                <td *ngIf="detail.headerId && qtn.detail.length == 1" class="text-center">
+                                <td *ngIf="detail.headerId && detail.type === 'header'" class="text-center">
                                     <div class="field">
                                         <div class="ui checkbox">
-                                            <input type="radio" name="point_{{questionnaire[i].detail[j].headerId}}"
-                                                value="N" id="point_{{questionnaire[i].detail[j].headerId}}"
-                                                required>
+                                            <input type="radio" name="point_header_{{questionnaire[i].detail[j].headerId}}"
+                                                value="N" [(ngModel)]="questionnaire[i].detail[j].point" id="point_header_{{questionnaire[i].detail[j].headerId}}">
                                             <label></label>
                                         </div>
                                     </div>
@@ -141,9 +70,8 @@
                                 <td *ngIf="detail.detailId" class="text-center">
                                     <div class="field">
                                         <div class="ui checkbox">
-                                            <input type="radio" name="point_{{questionnaire[i].detail[j].detailId}}"
-                                                value="Y" id="point_{{questionnaire[i].detail[j].detailId}}"
-                                                required>
+                                            <input type="radio" name="point_detail_{{questionnaire[i].detail[j].detailId}}"
+                                                value="Y" [(ngModel)]="questionnaire[i].detail[j].point" id="point_detail_{{questionnaire[i].detail[j].detailId}}">
                                             <label></label>
                                         </div>
                                     </div>
@@ -151,9 +79,8 @@
                                 <td *ngIf="detail.detailId" class="text-center">
                                     <div class="field">
                                         <div class="ui checkbox">
-                                            <input type="radio" name="point_{{questionnaire[i].detail[j].detailId}}"
-                                                value="N" id="point_{{questionnaire[i].detail[j].detailId}}"
-                                                required>
+                                            <input type="radio" name="point_detail_{{questionnaire[i].detail[j].detailId}}"
+                                                value="N" [(ngModel)]="questionnaire[i].detail[j].point" id="point_detail_{{questionnaire[i].detail[j].detailId}}">
                                             <label></label>
                                         </div>
                                     </div>
@@ -166,7 +93,7 @@
                         <div class="field">
                             <label class="text-left">สรุปผลการสอบทาน</label>
                             <div class="ui input">
-                                <textarea name="conclusion_{{questionnaire[i].detail[0].headerId}}" id="conclusion_{{questionnaire[i].detail[0].headerId}}"
+                                <textarea name="conclusion_{{questionnaire[i].detail[0].headerId}}" [(ngModel)]="questionnaire[i].conclusion" id="conclusion_{{questionnaire[i].detail[0].headerId}}"
                                     rows="4"></textarea>
                             </div>
                         </div>
@@ -175,7 +102,8 @@
             </div>
             <div class="ui grid">
                 <div class="save-btn center aligned column">
-                    <button class="ui mini primary button" type="submit">บันทึก</button>
+                    <button class="ui mini primary button {{saving ? 'loading' : ''}}" type="submit">บันทึก</button>
+                    <button class="ui mini primary button" (click)="send()" type="button">ส่งผลการประเมินแบบสอบทาน</button>
                 </div>
             </div>
         </form>
