--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
@@ -48,7 +48,7 @@
                                 <td *ngIf="detail.headerId && detail.type === 'header'">{{detail.content}}</td>
                                 <td *ngIf="detail.headerId && detail.type === 'header'" class="text-center">
                                     <div class="field">
-                                        <div class="ui checkbox">
+                                        <div class="ui checkbox {{ questionnaire[i].finished == 'Y' ? 'disabled' : '' }}">
                                             <input type="radio" name="point_header_{{questionnaire[i].detail[j].headerId}}"
                                                 value="Y" [(ngModel)]="questionnaire[i].detail[j].point" id="point_header_{{questionnaire[i].detail[j].headerId}}">
                                             <label></label>
@@ -57,7 +57,7 @@
                                 </td>
                                 <td *ngIf="detail.headerId && detail.type === 'header'" class="text-center">
                                     <div class="field">
-                                        <div class="ui checkbox">
+                                        <div class="ui checkbox {{ questionnaire[i].finished == 'Y' ? 'disabled' : '' }}">
                                             <input type="radio" name="point_header_{{questionnaire[i].detail[j].headerId}}"
                                                 value="N" [(ngModel)]="questionnaire[i].detail[j].point" id="point_header_{{questionnaire[i].detail[j].headerId}}">
                                             <label></label>
@@ -69,7 +69,7 @@
                                 <td *ngIf="detail.detailId">{{detail.content}}</td>
                                 <td *ngIf="detail.detailId" class="text-center">
                                     <div class="field">
-                                        <div class="ui checkbox">
+                                        <div class="ui checkbox {{ questionnaire[i].finished == 'Y' ? 'disabled' : '' }}">
                                             <input type="radio" name="point_detail_{{questionnaire[i].detail[j].detailId}}"
                                                 value="Y" [(ngModel)]="questionnaire[i].detail[j].point" id="point_detail_{{questionnaire[i].detail[j].detailId}}">
                                             <label></label>
@@ -78,7 +78,7 @@
                                 </td>
                                 <td *ngIf="detail.detailId" class="text-center">
                                     <div class="field">
-                                        <div class="ui checkbox">
+                                        <div class="ui checkbox {{ questionnaire[i].finished == 'Y' ? 'disabled' : '' }}">
                                             <input type="radio" name="point_detail_{{questionnaire[i].detail[j].detailId}}"
                                                 value="N" [(ngModel)]="questionnaire[i].detail[j].point" id="point_detail_{{questionnaire[i].detail[j].detailId}}">
                                             <label></label>
@@ -93,17 +93,17 @@
                         <div class="field">
                             <label class="text-left">สรุปผลการสอบทาน</label>
                             <div class="ui input">
-                                <textarea name="conclusion_{{questionnaire[i].detail[0].headerId}}" [(ngModel)]="questionnaire[i].conclusion" id="conclusion_{{questionnaire[i].detail[0].headerId}}"
+                                <textarea [disabled]="questionnaire[i].finished == 'Y'" name="conclusion_{{questionnaire[i].detail[0].headerId}}" [(ngModel)]="questionnaire[i].conclusion" id="conclusion_{{questionnaire[i].detail[0].headerId}}"
                                     rows="4"></textarea>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="ui grid">
+            <div class="ui grid" *ngIf="questionnaire[0].finished == null || questionnaire[0].finished == 'N'">
                 <div class="save-btn center aligned column">
                     <button class="ui mini primary button {{saving ? 'loading' : ''}}" type="submit">บันทึก</button>
-                    <button class="ui mini primary button" (click)="send()" type="button">ส่งผลการประเมินแบบสอบทาน</button>
+                    <button class="ui mini primary button {{questionnaire[0].finished == null || !questionnaire[0].finished == 'N' ? 'disabled' : ''}}" (click)="send()" type="button">ส่งผลการประเมินแบบสอบทาน</button>
                 </div>
             </div>
         </form>
