int02m2, int02-2, int02-3

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
@@ -101,7 +101,7 @@
     <div class="ui segment" *ngIf="qtnMasterId">
       <div class="ui grid">
         <div class="sixteen wide column">
-          <condition class="ui form" [riskId]="qtnMasterId" [riskType]="'QTN_HEADER'" [page]="'int02-2'"></condition>
+          <condition class="ui form" [riskId]="qtnMasterId" [riskType]="'QTN_MASTER'" [page]="'int02-2'"></condition>
         </div>
       </div>
     </div>
