--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-3/int02-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-3/int02-3.component.html
@@ -192,7 +192,7 @@
 <div class="ui segment">
   <div class="ui grid">
     <div class="sixteen wide column">
-      <condition class="ui form" [riskId]="headerId" [riskType]="'QTN_MAIN'" [page]="'int02-3'"></condition>
+      <condition class="ui form" [riskId]="headerId" [riskType]="'QTN_HEADER'" [page]="'int02-3'"></condition>
     </div>
   </div>
 </div>
