--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -81,7 +81,7 @@
                             <a class="item " [routerLink]="[ '/int05/3/2'] " *ngIf="authService.renderByPage('int05/3/2')" routerLinkActive="active ">ตรวจสอบข้อมูลสินทรัพย์</a>
                         </div>
                     </div>
-                    <a class="item " [routerLink]="[ '/int05/4'] " *ngIf="authService.renderByPage('int05/4')" routerLinkActive="active ">บันทึกผลการจัดซื้อจัดจ้าง</a>
+                    <a class="item " [routerLink]="[ authService.renderByPage('admin') ? '/int05/4/admin' : '/int05/4']" *ngIf="authService.renderByPage('int05/4')" routerLinkActive="active ">บันทึกผลการจัดซื้อจัดจ้าง</a>
                 </div>
             </div>
             <div class="ui simple dropdown item " *ngIf="authService.renderByPage('int07')">
