--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m4/int02-m4-2/int02-m4-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m4/int02-m4-2/int02-m4-2.component.html
@@ -27,7 +27,7 @@
                         </div>
 
                         <div class="ui styled fluid accordion">
-                            <div *ngFor="let pro of province; let i = index">
+                            <div *ngFor="let pro of result; let i = index">
                                 <div class="title">
                                     <div class="inline fields">
                                         <div class="seven wide field">
