--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -1,4 +1,4 @@
-<Modal [id]="'modal-condition'" [type]="'custom'" [size]="'large'">
+<ui-modal [id]="'modal-condition'" [type]="'custom'" [size]="'large'">
     <i class="close icon"></i>
     <div class="header">
         <i class="add icon"></i> เพิ่มเงื่อนไข
@@ -95,7 +95,7 @@
             </div>
         </form>
     </div>
-</Modal>
+</ui-modal>
 
 
 <div class="ui grid">
