--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -204,11 +204,11 @@
                         </div>
                         <div>
                             <!-- <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;"> -->
-                            <table id="userManagementDt" class="ui small celled table aligned hover" style="width: 500%">
+                            <table id="userManagementDt" class="ui small celled table aligned hover nowrap" style="width: 150%">
                                 <thead id="trDrinamic">
                                     <tr>
                                         <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
-                                        <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
+                                        <th rowspan="2" style="text-align: center !important" >ชื่อผู้ประกอบการ</th>
                                         <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
                                         <th rowspan="2" style="text-align: center !important">พื้นที่</th>
                                         <th colspan="2" style="text-align: center !important">การชำระภาษีในสภาวะปกติ (บาท)</th>
