--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-1/int09-1-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-1/int09-1-1-1.component.html
@@ -5,8 +5,8 @@
   <br>
   <div class="inline fields" style="text-align: center !important;">ปะมาณการค่าใช้จ่ายในการเดินทางไปราชการ</div>
   <div class="inline fields" style="text-align: center !important;">หน่วยงาน กลุ่มตรวจสอบภายใน</div>
-  <div class="inline fields" style="text-align: center !important;">เดินทางไปราชการที่ สำนักงานสรรพสามิตพื้นที่เลย</div>
-  <div class="inline fields" style="text-align: center !important;">ตั้งแต่วันที่ 17 มิถุนายน 2561 - 30 มิถุนายน 2561</div>
+  <div class="inline fields" style="text-align: center !important;">เดินทางไปราชการที่ {{travelToHeadString}}</div>
+  <div class="inline fields" style="text-align: center !important;">ตั้งแต่วันที่ {{dateFromHead}} - {{dateToHead}}</div>
   <br>
   <div class="ui center aligned grid">
     <div class="eight wide column">
@@ -50,15 +50,14 @@
 
     </thead>
     <tfoot>
-
       <tr>
         <th rowspan="1" colspan="5" style="text-align: center !important;"> รวม </th>
-        <th rowspan="1" style="text-align: right !important;"> 204,000 </th>
+        <th rowspan="1" style="text-align: right !important;">{{totalFeedMoney}}</th>
         <th rowspan="1" style="text-align: center !important;"></th>
-        <th rowspan="1" style="text-align: right !important;"> 204,000 </th>
-        <th rowspan="1" style="text-align: right !important;"> 17,000 </th>
-        <th rowspan="1" style="text-align: right !important;"> 17,000 </th>
-        <th rowspan="1" style="text-align: right !important;"> 442,000 </th>
+        <th rowspan="1" style="text-align: right !important;">{{totalRoostMoney}}</th>
+        <th rowspan="1" style="text-align: right !important;">{{totalPassage}}</th>
+        <th rowspan="1" style="text-align: right !important;">{{totalOtherExpenses}}</th>
+        <th rowspan="1" style="text-align: right !important;">{{totalTotalMoney}}</th>
         <th colspan="2" style="text-align: center !important;"></th>
       </tr>
 
@@ -97,7 +96,6 @@
 
       <input type="hidden" id="id">
       <input type="hidden" id="idProcess">
-      <input type="hidden" id="name">
 
 
       <div class="inline fields">
@@ -105,13 +103,13 @@
           <label>ชื่อ</label>
         </div>
         <div class="three wide field">
-          <input id="nameForm" type="text">
+          <input id="name" type="text">
         </div>
         <div class="two wide field right aligned">
           <label>นามสกุล</label>
         </div>
         <div class="three wide field">
-          <input id="lastForm" type="text">
+          <input id="lastName" type="text">
         </div>
       </div>
       <div class="inline fields">
@@ -119,23 +117,23 @@
           <label>ตำแหน่ง</label>
         </div>
         <div class="three wide field">
-          <input type="text" id="rank">
+          <input id="position" type="text">
         </div>
         <div class="two wide field right aligned">
           <label>ประเภท</label>
         </div>
         <div class="three wide field">
-          <select class="ui dropdown" id="type" name="type" (change)="typeDropdownOnChange($evnet)">
-            <option value="">เลือกประเภท</option>
+          <select class="ui dropdown" id="type" name="type">
+            <option value="">เลือก</option>
             <option *ngFor="let data of typeDropdown" value="{{data.value}}">{{data.label}}</option>
           </select>
         </div>
-        <div class="one wide field right aligned">
+        <div class="two wide field right aligned">
           <label>ระดับ</label>
         </div>
         <div class="three wide field">
           <select class="ui dropdown" id="grade" name="grade">
-            <option value="">เลือกระดับ</option>
+            <option value="">เลือก</option>
             <option *ngFor="let data of gradeDropdown" value="{{data.value}}">{{data.label}}</option>
           </select>
         </div>
@@ -145,10 +143,10 @@
           <label>วันขออนุญาต</label>
         </div>
         <div class="three wide field">
-          <div class="ui calendar" id="dateOfApplication" style="width: 100%">
+          <div class="ui calendar" id="modalDate3" style="width: 100%">
             <div class="ui input left icon">
               <i class="time icon"></i>
-              <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+              <input type="text" name="date-raw" id="permissionDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
             </div>
           </div>
         </div>
@@ -156,10 +154,10 @@
           <label>วันเขียนเบิก</label>
         </div>
         <div class="three wide field">
-          <div class="ui calendar" id="dateOfWithdrawal" style="width: 100%">
+          <div class="ui calendar" id="modalDate4" style="width: 100%">
             <div class="ui input left icon">
               <i class="time icon"></i>
-              <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+              <input type="text" name="date-raw" id="writeDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
             </div>
           </div>
         </div>
@@ -169,11 +167,9 @@
           <label>เดินทางจาก</label>
         </div>
         <div class="three wide field ui right aligned">
-          <select class="ui dropdown" id="travelFrom" name="travelFrom">
+          <select class="ui dropdown" id="departure">
             <option value="">เลือก</option>
-            <option value="1">บ้าน - สนง.</option>
-            <option value="2">สนง. - สนง.</option>
-            <option value="3">สนง. - บ้าน</option>
+            <option *ngFor="let data of departureDropdown" value="{{data.value}}">{{data.label}}</option>
           </select>
         </div>
       </div>
@@ -182,10 +178,10 @@
           <label>วัน เวลา ออกเดินทาง</label>
         </div>
         <div class="three wide field">
-          <div class="ui calendar" id="departureDate" style="width: 100%">
+          <div class="ui calendar" id="modalDate5" style="width: 100%">
             <div class="ui input left icon">
               <i class="time icon"></i>
-              <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+              <input type="text" name="date-raw" id="departureDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
             </div>
           </div>
         </div>
@@ -193,74 +189,70 @@
           <label>วัน เวลา กลับถึง</label>
         </div>
         <div class="three wide field">
-          <div class="ui calendar" id="returnDate" style="width: 100%">
+          <div class="ui calendar" id="modalDate6" style="width: 100%">
             <div class="ui input left icon">
               <i class="time icon"></i>
-              <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+              <input type="text" name="date-raw" id="returnDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
             </div>
           </div>
         </div>
       </div>
       <div class="inline fields">
         <div class="three wide field ui right aligned">
+          <label>กรณีค่าเบี้ยเลี้ยง</label>
+        </div>
+        <div class="three wide field">
+          <select class="ui dropdown" id="allowance">
+            <option value="">เลือก</option>
+            <option *ngFor="let data of allowanceDropdown" value="{{data.value}}">{{data.label}}</option>
+          </select>
+        </div>
+        <div class="two wide field ui right aligned">
           <label>กรณีฝึกอบรม</label>
         </div>
         <div class="three wide field">
-          <select class="ui dropdown" id="trainingCase" name="trainingCase">
-            <option value="">เลือกกรณีฝึกอบรม</option>
-            <option *ngFor="let data of trainingCaseDropdown" value="{{data.value}}">{{data.label}}</option>
+          <select class="ui dropdown" id="training">
+            <option value="">เลือก</option>
+            <option *ngFor="let data of trainingDropdown" value="{{data.value}}">{{data.label}}</option>
           </select>
         </div>
-      </div>
-      <div class="inline fields">
-        <div class="three wide field right aligned">
-          <label>ประเภทการเบิก</label>
-        </div>
-        <div class="three wide field">
-          <select class="ui dropdown" id="withdrawType" name="withdrawType" (change)="trainingRoomTypeDropdownList($evnet)">
-            <option value="">เลือกประเภทการเบิก</option>
-            <option *ngFor="let data of withdrawTypeDropdown" value="{{data.value}}">{{data.label}}</option>
-          </select>
-        </div>
-        <div class="two wide field right aligned">
-          <label>ประเภทห้องอบรม</label>
-        </div>
-        <div class="three wide field">
-          <select class="ui dropdown" id="trainingRoomType" name="trainingRoomType">
-            <option value="">เลือกประเภทห้องอบรม</option>
-            <option *ngFor="let data of trainingRoomTypeDropdown" value="{{data.value}}">{{data.label}}</option>
-          </select>
-        </div>
-
       </div>
       <div class="inline fields">
         <div class="three wide field right aligned">
           <label>กรณีที่พัก</label>
         </div>
-        <div class="three wide field ui right aligned">
-          <select class="ui dropdown" id="accommodationCase" name="accommodationCase">
-            <option value="">เลือกกรณีที่พัก</option>
-            <option value="1">ปกติ</option>
-            <option value="2">เหมาจ่าย </option>
+        <div class="three wide field">
+          <select class="ui dropdown" id="roost">
+            <option value="">เลือก</option>
+            <option *ngFor="let data of roostDropdown" value="{{data.value}}">{{data.label}}</option>
           </select>
         </div>
         <div class="two wide field right aligned">
-          <label>ประเภทที่พัก</label>
+          <label>ประเภทการฝึกอบรม</label>
         </div>
-        <div class="three wide field ui right aligned">
-          <select class="ui dropdown" id="roomType" name="roomType">
-            <option value="">เลือกประที่พัก</option>
-            <option value="1">ห้องเดี่ยว</option>
-            <option value="2">ห้องคู่</option>
+        <div class="three wide field">
+          <select class="ui dropdown" id="trainingType" >
+            <option value="">เลือก</option>
+            <option *ngFor="let data of trainingTypeDropdown" value="{{data.value}}">{{data.label}}</option>
           </select>
         </div>
+        <div class="two wide field right aligned">
+          <label>ประเภทห้อง</label>
+        </div>
+        <div class="three wide field">
+          <select class="ui dropdown" id="roomType" >
+            <option value="">เลือก</option>
+            <option *ngFor="let data of roomTypeDropdown" value="{{data.value}}">{{data.label}}</option>
+          </select>
+        </div>
+
       </div>
       <div class="inline fields">
         <div class="three wide field ui right aligned">
           <label>จำนวนวันเข้าพัก</label>
         </div>
         <div class="three wide field">
-          <input id="numberOfDate" type="number" [attr.step]="1" required>
+          <input id="numberDate" type="number" [attr.step]="1" required>
         </div>
       </div>
       <div class="inline fields">
@@ -268,14 +260,14 @@
           <label>ค่าพาหนะ</label>
         </div>
         <div class="three wide field">
-          <input type="number" id="travelExpense" [attr.step]="1" required>
+          <input id="passage" type="number" [attr.step]="1" required>
         </div>
 
         <div class="two wide field right aligned">
           <label>ค่าใช้จ่ายอื่น</label>
         </div>
         <div class="three wide field">
-          <input type="number" id="otherExpenses" [attr.step]="1" required>
+          <input id="otherExpenses" type="number" [attr.step]="1" required>
         </div>
       </div>
       <div class="ui grid">
@@ -311,67 +303,67 @@
     <div class="ui form">
 
       <input type="hidden" id="searchFlag">
+
       <div class="inline fields">
         <div class="three wide field"></div>
         <div class="two wide field">
             <label>เดินทางไป</label>
         </div>
     </div>
-      <div class="inline fields">
-        <div class="three wide field">
+    <div class="inline fields">
+      <div class="three wide field">
           <label>สรรพสามิตภาค</label>
-        </div>
-        <div class="five wide field">
-          <select class="ui dropdown search selection" style="width: 100%;" id="sector" (change)="sectorOnchange($event)">
-            <option value="">เลือก</option>
-            <option *ngFor="let data of sectorList" value="{{data.value}}">{{data.label}}</option>
+      </div>
+      <div class="five wide field">
+          <select class="ui dropdown search selection" style="width: 100%;" id="travelToHead1" (change)="travelToHead2Dropdown($event)">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of travelToHead1List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
           </select>
-        </div>
-        <div class="three wide field">
+      </div>
+      <div class="three wide field">
           <label>สรรพสามิตพื้นที่</label>
-        </div>
-        <div class="five wide field">
-          <select class="ui dropdown search selection" style="width: 100%;" id="area" (change)="areaOnChange($event)">
-            <option value="">เลือก</option>
-            <option *ngFor="let data of areaDropdown" value="{{data.value}}">{{data.label}}</option>
-          </select>
-        </div>
       </div>
-      <div class="inline fields">
-        <div class="three wide field">
+      <div class="five wide field">
+          <select class="ui dropdown search selection" style="width: 100%;" id="travelToHead2" (change)="travelToHead3Dropdown($event)">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of travelToHead2List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+          </select>
+      </div>
+  </div>
+  <div class="inline fields">
+      <div class="three wide field">
           <label>สรพพสามิตสาขา</label>
-        </div>
-        <div class="five wide field">
-          <select class="ui dropdown search selection" style="width: 100%;" id="branch">
-            <option value="">เลือก</option>
-            <option *ngFor="let data of branchDropdown" value="{{data.value}}">{{data.label}}</option>
-          </select>
-        </div>
-
       </div>
+      <div class="five wide field">
+          <select class="ui dropdown search selection" style="width: 100%;" id="travelToHead3"  (change)="setTravelToHead($event)" >
+              <option value="">เลือก</option>
+              <option *ngFor="let data of travelToHead3List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+          </select>
+      </div>
+  </div>
       <div class="inline fields">
         <div class="three wide field">
           <label>ตั้งแต่วันที่</label>
         </div>
         <div class="five wide field">
-          <div class="ui calendar" id="date" style="width: 100%;">
-            <div class="ui input left icon">
-              <i class="time icon"></i>
-              <input type="text" id="fiscalYearIn" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
-            </div>
+          <div class="ui calendar" id="modalDate1" style="width: 100%;">
+              <div class="ui input left icon">
+                  <i class="time icon"></i>
+                  <input type="text" id="departureDateHead" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
+              </div>
           </div>
-        </div>
+      </div>
         <div class="three wide field">
           <label>ถึง</label>
         </div>
         <div class="five wide field">
-          <div class="ui calendar" id="date2" style="width: 100%;">
-            <div class="ui input left icon">
-              <i class="time icon"></i>
-              <input type="text" id="fiscalYearIn" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
-            </div>
+          <div class="ui calendar" id="modalDate2" style="width: 100%;">
+              <div class="ui input left icon">
+                  <i class="time icon"></i>
+                  <input type="text" id="returnDateHead" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
+              </div>
           </div>
-        </div>
+      </div>
       </div>
 
     </div>
